--- a/jr-cms/package.json
+++ b/jr-cms/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "debug": "nodemon --inspect src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "joi": "^17.12.2",
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "winston": "^3.11.0"
