--- a/jr-cms/package.json
+++ b/jr-cms/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.js",
-    "debug": "nodemon --inspect src/app.js"
+    "dev": "nodemon src/index.js",
+    "debug": "nodemon --inspect src/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,9 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "@shelf/jest-mongodb": "^4.2.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4"
   }
 }
